--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 <!-- <span class="theme-btn btn-style-two" style="cursor: not-allowed ;">We Will Be Accepting Registrations Soon</span> -->
                 <!-- <a href="https://youtu.be/iTubr50b2Z4" target="_blank"
                                     class="theme-btn btn-style-three"><span>video presentation</span></a> -->
-                <a href="callforpaper.html" class="theme-btn btn-style-three"><span>Check Your Schedule</span></a>
+                <a href="#check" class="theme-btn btn-style-three"><span>Check Your Schedule</span></a>
               </div>
             </div>
           </div>
@@ -282,7 +282,7 @@
             and uploading it on the world wide web, making it more portable to
             anyone in the world.
           </div>
-          <a href="about.html" class="theme-btn btn-style-one">Check Your Schedule</a>
+          <a href="#check" class="theme-btn btn-style-one">Check Your Schedule</a>
         </div>
 
         <!--Video Box-->
@@ -1071,7 +1071,7 @@
     </section>
     </section> -->
     
-     <section class="news-section">
+     <section id="check" class="news-section">
             <div class="auto-container">
                 <div class="sec-title centered">
                     <div class="title">SCEECS Conference 2023</div>
