--- a/index.html
+++ b/index.html
@@ -847,7 +847,7 @@
             <tr>
               <th scope="row">1</th>
               <td>CSE</td>
-              <td>Present</td>
+              <td>Physical</td>
               <td><a id="1" href="Files/csep1.pdf">Download</a></td>
             </tr>
             <tr>
@@ -901,7 +901,7 @@
             <tr>
               <th scope="row">10</th>
               <td>ECE</td>
-              <td>Present</td>
+              <td>Physical</td>
               <td><a id="10" href="Files/ecep1.pdf">Download</a></td>
             </tr>
             <tr>
@@ -925,13 +925,13 @@
             <tr>
               <th scope="row">14</th>
               <td>EE</td>
-              <td>Present</td>
+              <td>Physical</td>
               <td><a id="14" href="Files/EEP1.pdf">Download</a></td>
             </tr>
             <tr>
               <th scope="row">15</th>
               <td>EE</td>
-              <td>Present</td>
+              <td>Physical</td>
               <td><a id="15" href="Files/EEP2.pdf">Download</a></td>
             </tr>
             <tr>
