--- a/index.html
+++ b/index.html
@@ -291,9 +291,9 @@
         <!--Video Box-->
         <div class="video-box">
           <figure class="video-image">
-            <img src="images/resource/video-img.jpg" alt="" />
+            <img src="images/resource/video.jpg" style="width:100%;height:500px" alt="" />
             <div class="content">
-              <a href="https://youtu.be/wcskvfbf71A" class="lightbox-image overlay-box"><span
+              <a href="images/resource/sceecs trailer.mp4" class="lightbox-image overlay-box"><span
                   class="flaticon-play-button"><i class="ripple"></i></span></a>
               <h3>Discover What’s Ahead</h3>
             </div>
