--- a/index.html
+++ b/index.html
@@ -866,13 +866,13 @@
               <th scope="row">4</th>
               <td>CSE</td>
               <td>Virtual</td>
-              <td><a id="4" href="Files/csev3.pdf">Download</a></td>
+              <td><a id="4" href="Files/csev3(1).pdf">Download</a></td>
             </tr>
             <tr>
               <th scope="row">5</th>
               <td>CSE</td>
               <td>Virtual</td>
-              <td><a id="5" href="Files/csev4.pdf">Download</a></td>
+              <td><a id="5" href="Files/csev4(1).pdf">Download</a></td>
             </tr>
             <tr>
               <th scope="row">6</th>
@@ -884,7 +884,7 @@
               <th scope="row">7</th>
               <td>CSE</td>
               <td>Virtual</td>
-              <td><a id="7" href="Files/csev6.pdf">Download</a></td>
+              <td><a id="7" href="Files/csev6(1).pdf">Download</a></td>
             </tr>
             <tr>
               <th scope="row">8</th>
@@ -920,7 +920,7 @@
               <th scope="row">13</th>
               <td>ECE</td>
               <td>Virtual</td>
-              <td><a id="13" href="Files/ecev3.pdf">Download</a></td>
+              <td><a id="13" href="Files/ecev3(1).pdf">Download</a></td>
             </tr>
             <tr>
               <th scope="row">14</th>
