--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
               Don't miss out on the opportunity to hear from such a celebrated visionary entrepreneur! Register NOW at SCEECS'23!
             </div>
             <div class="buttons-box">
-              <a href="https://forms.gle/7gg5kswN18cP1pXP8" class="theme-btn btn-style-one">Register Here.</a>
+              <a href="https://forms.gle/7gg5kswN18cP1pXP8" target="_blank" class="theme-btn btn-style-one">Register Here.</a>
             </div> 
           </div>
         </div>
@@ -483,7 +483,7 @@
               A chance to start your career in the field and gain invaluable insights from the industry leader himself. Grab your seat. Register for SCEECS'23 now!
             </div>
             <div class="buttons-box">
-              <a href="https://forms.gle/7gg5kswN18cP1pXP8" class="theme-btn btn-style-one">Register Here.</a>
+              <a href="https://forms.gle/7gg5kswN18cP1pXP8" target="_blank" class="theme-btn btn-style-one">Register Here.</a>
             </div> 
           </div>
         </div>
