--- a/index.html
+++ b/index.html
@@ -848,109 +848,109 @@
               <th scope="row">1</th>
               <td>CSE</td>
               <td>Physical</td>
-              <td><a id="1" href="Files/csep1.docx">Download</a></td>
+              <td><a id="1" href="Files/csep1.pdf">Download</a></td>
             </tr>
             <tr>
               <th scope="row">2</th>
               <td>CSE</td>
               <td>Virtual</td>
-              <td><a id="2" href="Files/csev1.docx">Download</a></td>
+              <td><a id="2" href="Files/csev1.pdf">Download</a></td>
             </tr>
             <tr>
               <th scope="row">3</th>
               <td>CSE</td>
               <td>Virtual</td>
-              <td><a id="3" href="Files/csev2.docx">Download</a></td>
+              <td><a id="3" href="Files/csev2.pdf">Download</a></td>
             </tr>
             <tr>
               <th scope="row">4</th>
               <td>CSE</td>
               <td>Virtual</td>
-              <td><a id="4" href="Files/csev3.docx">Download</a></td>
+              <td><a id="4" href="Files/csev3.pdf">Download</a></td>
             </tr>
             <tr>
               <th scope="row">5</th>
               <td>CSE</td>
               <td>Virtual</td>
-              <td><a id="5" href="Files/csev4.docx">Download</a></td>
+              <td><a id="5" href="Files/csev4.pdf">Download</a></td>
             </tr>
             <tr>
               <th scope="row">6</th>
               <td>CSE</td>
               <td>Virtual</td>
-              <td><a id="6" href="Files/csev5.docx">Download</a></td>
+              <td><a id="6" href="Files/csev5.pdf">Download</a></td>
             </tr>
             <tr>
               <th scope="row">7</th>
               <td>CSE</td>
               <td>Virtual</td>
-              <td><a id="7" href="Files/csev6.docx">Download</a></td>
+              <td><a id="7" href="Files/csev6.pdf">Download</a></td>
             </tr>
             <tr>
               <th scope="row">8</th>
               <td>CSE</td>
               <td>Virtual</td>
-              <td><a id="8" href="Files/csev7.docx">Download</a></td>
+              <td><a id="8" href="Files/csev7.pdf">Download</a></td>
             </tr>
             <tr>
               <th scope="row">9</th>
               <td>CSE</td>
               <td>Virtual</td>
-              <td><a id="9" href="Files/csev8.docx">Download</a></td>
+              <td><a id="9" href="Files/csev8.pdf">Download</a></td>
             </tr>
             <tr>
               <th scope="row">10</th>
               <td>ECE</td>
               <td>Physical</td>
-              <td><a id="10" href="Files/ecep1.docx">Download</a></td>
+              <td><a id="10" href="Files/ecep1.pdf">Download</a></td>
             </tr>
             <tr>
               <th scope="row">11</th>
               <td>ECE</td>
               <td>Virtual</td>
-              <td><a id="11" href="Files/ecev1.docx">Download</a></td>
+              <td><a id="11" href="Files/ecev1.pdf">Download</a></td>
             </tr>
             <tr>
               <th scope="row">12</th>
               <td>ECE</td>
               <td>Virtual</td>
-              <td><a id="12" href="Files/ecev2.docx">Download</a></td>
+              <td><a id="12" href="Files/ecev2.pdf">Download</a></td>
             </tr>
             <tr>
               <th scope="row">13</th>
               <td>ECE</td>
               <td>Virtual</td>
-              <td><a id="13" href="Files/ecev3.docx">Download</a></td>
+              <td><a id="13" href="Files/ecev3.pdf">Download</a></td>
             </tr>
             <tr>
               <th scope="row">14</th>
               <td>EE</td>
               <td>Physical</td>
-              <td><a id="14" href="Files/EEP1.docx">Download</a></td>
+              <td><a id="14" href="Files/EEP1.pdf">Download</a></td>
             </tr>
             <tr>
               <th scope="row">15</th>
               <td>EE</td>
               <td>Physical</td>
-              <td><a id="15" href="Files/EEP2.docx">Download</a></td>
+              <td><a id="15" href="Files/EEP2.pdf">Download</a></td>
             </tr>
             <tr>
               <th scope="row">16</th>
               <td>EE</td>
               <td>Virtual</td>
-              <td><a id="16" href="Files/EEV1.docx">Download</a></td>
+              <td><a id="16" href="Files/EEV1.pdf">Download</a></td>
             </tr>
             <tr>
               <th scope="row">17</th>
               <td>EE</td>
               <td>Virtual</td>
-              <td><a id="17" href="Files/EEV2.docx">Download</a></td>
+              <td><a id="17" href="Files/EEV2.pdf">Download</a></td>
             </tr>
             <tr>
               <th scope="row">18</th>
               <td>EE</td>
               <td>Virtual</td>
-              <td><a id="18" href="Files/EEV3.docx">Download</a></td>
+              <td><a id="18" href="Files/EEV3.pdf">Download</a></td>
             </tr>
           </tbody>
         </table>
