Pre-requisite Added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>-->
 
         <div class="modal-body text-center"
-          style="border-radius: 20px;padding: 50px;background-image: linear-gradient(to right, rgb(200, 76, 216), rgb(124, 7, 174));">
+          style="border-radius: 20px;padding: 35px;background-image: linear-gradient(to right, rgb(200, 76, 216), rgb(124, 7, 174));">
 
           <button type="button" class="close" data-dismiss="modal"
             style="position:relative;margin: -1rem -1rem -1rem auto">
@@ -42,7 +42,10 @@
             to register.
             <!-- Don't miss this chance to publish your research in IEEE Xplore&#174;.-->
           </h5>
-          <a class="pre-order-btn" href="http://wa.me/+918769900778" style="background-color:#c891dc">Contact Us</a>
+          <div class="buttons row">
+            <a class="pre-order-btn" href="http://wa.me/+918769900778" style="background-color:#c891dc;width: 45% !important; margin: 0.5rem 0.5rem !important;">Contact Us</a>
+            <a class="pre-order-btn" href="workshop.html" style="background-color:#c891dc; width: 45% !important; margin: 0.5rem 0.5rem !important;">Know More</a>
+        </div>
           <!--<a class="pre-order-btn" href="guidelines2.html">Read Guidelines</a>-->
         </div>
       </div>
@@ -1011,7 +1014,7 @@
     <!-- End Sponsors Section -->
     <!-- Events Section -->
 
-    <section class="events-section" style="background-image: url(images/background/2.png)">
+    <section id="event_schedule" class="events-section" style="background-image: url(images/background/2.png)">
       <div class="auto-container">
         <!-- Sec Title -->
         <div class="sec-title centered">
@@ -1072,7 +1075,7 @@
                         <div class="info-column col-lg-7 col-sm-12 col-md-12">
                           <div class="inner-column">
                             <h2>
-                              <a href="#">INAUGRATION CEREMONY</a>
+                              INAUGRATION CEREMONY
                             </h2>
                             <div class="name">Inauguration of SCEECS'23 and welcome address.</div>
                             <div class="text font-weight-bold">TIME: 9:30 AM</div>
@@ -1141,7 +1144,7 @@
                                 <div class="overlay-inner">
                                   <div class="content">
                                     <h3>
-                                      <a href="callforpaper.html">Research Paper Conference</a>
+                                      <a href="index.html">Research Paper Conference</a>
                                     </h3>
                                   </div>
                                 </div>
@@ -1160,7 +1163,7 @@
                           <div class="inner-column">
                             <!-- <div class="name">SCEECS 2023</div> -->
                             <h2>
-                              <a href="callforpaper.html">Research Paper Conference</a>
+                              <a href="index.html">Research Paper Conference</a>
                             </h2>
                             <div class="text">
                               Conference Session - 1
@@ -1186,7 +1189,7 @@
                                 <div class="overlay-inner">
                                   <div class="content">
                                     <h3>
-                                      <a href="callforpaper.html">Research Paper Conference</a>
+                                      <a href="index.html">Research Paper Conference</a>
                                     </h3>
                                   </div>
                                 </div>
@@ -1250,7 +1253,7 @@
                           <div class="inner-column">
                             <!-- <div class="name">SCEECS 2023</div> -->
                             <h2>
-                              <a href="callforpaper.html">Workshop</a>
+                              <a href="workshop.html">Workshop</a>
                             </h2>
                             <div class="text">
                               Workshop Session - 1
@@ -1276,7 +1279,7 @@
                                 <div class="overlay-inner">
                                   <div class="content">
                                     <h3>
-                                      <a href="callforpaper.html">Workshop</a>
+                                      <a href="workshop.html">Workshop</a>
                                     </h3>
                                   </div>
                                 </div>
@@ -1295,7 +1298,7 @@
                           <div class="inner-column">
                             <!-- <div class="name">SCEECS 2023</div> -->
                             <h2>
-                              <a href="callforpaper.html">Worshop</a>
+                              <a href="workshop.html">Workshop</a>
                             </h2>
                             <div class="text">
                               Worshop Session - 2
