--- a/workshop.html
+++ b/workshop.html
@@ -169,6 +169,13 @@
                             <div class="image">
                                 <img src="images/sceecs_3.jpg" alt="" />
                             </div>
+                            <p class="mt-3 font-weight-bold" style="font-size: 4vh;" >As a prerequisite of the workshop, do the below mentioned:</p>
+                            <ul class="list-style-one" >
+                                <li>Watch the attached C++ course for a better understanding of the curriculum:  <a href="https://www.youtube.com/watch?v=vLnPwxZdW4Y">C++ tutorial for beginners.</a></li>
+                                <li>Join the discord community: <a href="https://discord.gg/dKW7aNyx">https://discord.gg/dKW7aNyx</a></li>
+                                <li>Bring along your laptop for hands-on experience.</li>
+                                <li>Set up any IDE of your choice in your local system before the workshop.</li>
+                            </ul>
                         </div>
                     </div>
                     <!-- Content Column -->
@@ -199,9 +206,15 @@
                                         <li> Additionally, it provides a platform for attendees to network with
                                             like-minded
                                             individuals and establish professional connections.</li>
+                                        <li> Also, ensure your active account is on the GeeksforGeeks portal to have a smooth workshop experience.</li>
                                     </ul>
                                 </div>
                             </div>
+                            <h6 class="my-lg-3" style="color: black; font-weight: 800;" >Workshop Venue: <span>Mechanical Auditorium, MANIT</span> </h6>
+                            <p  class="font-weight-bold" style="font-size: 3vh;">Note: It is compulsory for everyone to carry the physical college ID or Government ID with them. Please reach before the entry and attendance time to avoid the crowd.</p>
+                            <a href="index.html#event_schedule" target="_blank" class="theme-btn btn-style-one">Visit Timeline</a>                            
+
+
                         </div>
                     </div>
 
