--- a/workshop.html
+++ b/workshop.html
@@ -170,7 +170,7 @@
                                 <img src="images/sceecs_3.jpg" alt="" />
                             </div>
                             <p class="mt-3 font-weight-bold" style="font-size: 4vh;" >As a prerequisite of the workshop, do the below mentioned:</p>
-                            <ul class="list-style-one" >
+                            <ul class="list-style-one" style="text-align: left;">
                                 <li>Watch the attached C++ course for a better understanding of the curriculum:  <a href="https://www.youtube.com/watch?v=vLnPwxZdW4Y">C++ tutorial for beginners.</a></li>
                                 <li>Join the discord community: <a href="https://discord.gg/dKW7aNyx">https://discord.gg/dKW7aNyx</a></li>
                                 <li>Bring along your laptop for hands-on experience.</li>
