--- a/gallery.html
+++ b/gallery.html
@@ -188,6 +188,23 @@
                         <div class="gallery-block mix all gl col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <div class="image">
+                                    <img src="bg.png" alt="" />
+                                    <!-- Overlay Box -->
+                                    <div class="overlay-box">
+                                        <div class="overlay-inner">
+                                            <div class="overlay-content">
+                                                <a class="plus" href="images/gallery/01.jpg" data-fancybox="gallery-2"
+                                                    data-caption=""><span class="flaticon-add-1"></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Gallery Block -->
+                        <div class="gallery-block mix all gl col-lg-4 col-md-6 col-sm-12">
+                            <div class="inner-box">
+                                <div class="image">
                                     <img src="images/gallery/01.jpg" alt="" />
                                     <!-- Overlay Box -->
                                     <div class="overlay-box">
