--- a/gallery.html
+++ b/gallery.html
@@ -193,7 +193,7 @@
                                     <div class="overlay-box">
                                         <div class="overlay-inner">
                                             <div class="overlay-content">
-                                                <a class="plus" href="images/gallery/01.jpg" data-fancybox="gallery-2"
+                                                <a class="plus" href="bg.png" data-fancybox="gallery-2"
                                                     data-caption=""><span class="flaticon-add-1"></span></a>
                                             </div>
                                         </div>
