--- a/workshop.html
+++ b/workshop.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <title>SCEECS'23 - Workshop</title>
+    <title>SCEECS'24 - Workshop</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
@@ -31,7 +31,7 @@
                     <div class="clearfix">
                         <div class="pull-left logo-box">
                             <div class="logo">
-                                <a href="index.html"><img src="images/logo.png" alt="" title="" id="mainlogo" /></a>
+                                <a href="index.html"><img src="images/logo.png" alt="" title="" id="mainlogo" style="width: 90px; height: 59px;"/></a>
                             </div>
 
                             <!--Mobile Navigation Toggler For Mobile-->
@@ -101,7 +101,7 @@
                     <!--Logo-->
                     <div class="logo pull-left">
                         <a href="index.html" class="img-responsive"><img src="images/small-logo.png" alt="logo"
-                                title="" /></a>
+                                title="" style="width: 80px; height: 56px;" /></a>
                     </div>
 
                     <!--Right Col-->
@@ -129,7 +129,7 @@
                     <span class="icon flaticon-cancel"></span>
                 </div>
 
-                <nav class="menu-box">
+                <nav class="menu-box" style="background-color: rgb(4, 4, 36);">
                     <div class="nav-logo">
                         <a href="index.html"><img src="images/logo-dark.png" alt="" title="" /></a>
                     </div>
@@ -659,7 +659,7 @@
 
                     <div class="title-box">
                         <div class="title">A flagship conference by IEEE-MSB</div>
-                        <h2>SCEECS 2023</h2>
+                        <h2>SCEECS 2024</h2>
                     </div>
 
                     <div class="newsletter-form">
@@ -680,7 +680,7 @@
                     <!-- Footer Logo -->
                     <div class="logo">
                         <a href="index.html"><img src="images/ieee-logo-white.png" alt="" /></a> &nbsp;
-                        <a href="index.html"><img src="images/med-logo.png" alt="" /></a>
+                        <a href="index.html"><img src="images/med-logo.png" alt="" style="width: 80px; height: 57px;" /></a>
                     </div>
                     <div class="text">
                         IEEE is the world’s largest technical professional organization. It is dedicated to the
@@ -731,7 +731,7 @@
                     <div class="copyright">
                         <a href="https://ieeenitb.com/">IEEENITB.COM</a> |
                         <a href="http://www.manit.ac.in/">MANIT</a> |
-                        <a href="https://www.ieee.org/">IEEE.ORG </a><br /> Copyright &copy; sceecs.ieeenitb.com 2023.
+                        <a href="https://www.ieee.org/">IEEE.ORG </a><br /> Copyright &copy; sceecs.ieeenitb.com 2024.
                         All rights reserved.
                     </div>
                 </div>
