--- a/about.html
+++ b/about.html
@@ -387,7 +387,7 @@
                             <div class="dots-one"></div>
                             <div class="dots-two"></div>
                             <div class="image">
-                                <img src="images/Devansh.jpeg" alt="" />
+                                <img src="Devansh.jpeg" alt="" />
                             </div>
                             <div class="lower-content">
                                 <h3><a href="#">Mr. Devansh Kapri</a></h3>
@@ -402,7 +402,7 @@
                             <div class="dots-one"></div>
                             <div class="dots-two"></div>
                             <div class="image">
-                                <img src="images/Vidushi Sharma.jpg" alt="" />
+                                <img src="Vidushi Sharma.jpg" alt="" />
                             </div>
                             <div class="lower-content">
                                 <h3><a href="#">Ms. Vidushi Sharma
@@ -418,7 +418,7 @@
                             <div class="dots-one"></div>
                             <div class="dots-two"></div>
                             <div class="image">
-                                <img src="images/Arya Jain.jpg" alt="" />
+                                <img src="Arya Jain.jpg" alt="" />
                             </div>
                             <div class="lower-content">
                                 <h3 style="font-size: 25px">
@@ -435,7 +435,7 @@
                             <div class="dots-one"></div>
                             <div class="dots-two"></div>
                             <div class="image">
-                                <img src="images/Aditya Pagnis.jpg" alt="" />
+                                <img src="Aditya Pagnis.jpg" alt="" />
                             </div>
                             <div class="lower-content">
                                 <h3><a href="#">Mr. Aditya Pagnis</a></h3>
