removed program chair

--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <title>SCEECS'23 - Gallery</title>
+    <title>SCEECS'24 - Gallery</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
@@ -31,7 +31,7 @@
                     <div class="clearfix">
                         <div class="pull-left logo-box">
                             <div class="logo">
-                                <a href="index.html"><img src="images/logo.png" alt="" title="" id="mainlogo" /></a>
+                                <a href="index.html"><img src="images/logo.png" alt="" title="" id="mainlogo" style="width: 90px; height: 59px;" /></a>
                             </div>
 
                             <!--Mobile Navigation Toggler For Mobile-->
@@ -57,9 +57,9 @@
                                     <ul class="navigation clearfix">
                                         <li><a href="index.html">Home</a></li>
                                         <li><a href="about.html">About</a></li>
-                                        <li><a href="workshop.html">Workshop</a></li>
+                                        <!-- <li><a href="workshop.html">Workshop</a></li> -->
                                         <li><a href="speaker.html">Guest Lecture</a></li>
-                                        <li><a href="callforpaper.html">Call For Paper</a></li>
+                                        <!-- <li><a href="callforpaper.html">Call For Paper</a></li> -->
                                         <!-- <li class="dropdown">
                                             <a href="#">Guidelines</a>
                                             <ul>
@@ -77,6 +77,7 @@
                                         <li class="current">
                                             <a href="gallery.html">Gallery</a>
                                         </li>
+                                        
                                         <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
                                 </div>
@@ -103,7 +104,7 @@
                     <!--Logo-->
                     <div class="logo pull-left">
                         <a href="index.html" class="img-responsive"><img src="images/small-logo.png" alt="logo"
-                                title="" /></a>
+                                title="" style="width: 80px; height: 56px;" /></a>
                     </div>
 
                     <!--Right Col-->
@@ -131,7 +132,7 @@
                     <span class="icon flaticon-cancel"></span>
                 </div>
 
-                <nav class="menu-box">
+                <nav class="menu-box" style="background-color: rgb(4, 4, 36);">
                     <div class="nav-logo">
                         <a href="index.html"><img src="images/logo-dark.png" alt="" title="" /></a>
                     </div>
@@ -169,7 +170,7 @@
                                 All
                             </li>
                             <li class="filter" data-role="button" data-filter=".gl">
-                                Guest Lectures
+                                Guest
                             </li>
                             <li class="filter" data-role="button" data-filter=".conference">
                                 Conference
@@ -624,13 +625,13 @@
 
                     <div class="title-box">
                         <div class="title">A flagship conference by IEEE-MSB</div>
-                        <h2>SCEECS 2023</h2>
+                        <h2>SCEECS 2024</h2>
                     </div>
 
                     <div class="newsletter-form">
                         <div class="form-group">
-                            <a href="docs/CallForPapers.pdf" target="_blank" class="theme-btn btn-style-one">Download
-                                Brochure</a>
+                            <!-- <a href="docs/CallForPapers.pdf" target="_blank" class="theme-btn btn-style-one">Download
+                                Brochure</a> -->
                         </div>
                     </div>
                 </div>
@@ -645,7 +646,7 @@
                     <!-- Footer Logo -->
                     <div class="logo">
                         <a href="index.html"><img src="images/ieee-logo-white.png" alt="" /></a> &nbsp;
-                        <a href="index.html"><img src="images/med-logo.png" alt="" /></a>
+                        <a href="index.html"><img src="images/med-logo.png" style="width: 80px; height: 57px;" alt="" /></a>
                     </div>
                     <div class="text">
                         IEEE is the world’s largest technical professional organization. It is dedicated to the
@@ -677,11 +678,15 @@
                 <div class="auto-container">
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="speaker.html">Guest Lecture</a></li>
-                        <li><a href="callforpaper.html">Call For Paper</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
+                                        <li><a href="about.html">About</a></li>
+                                        <!-- <li><a href="workshop.html">Workshop</a></li> -->
+                                        <li><a href="speaker.html">Guest Lecture</a></li>
+                                        <!-- <li><a href="callforpaper.html">Call For Paper</a></li> -->
+ <li >
+                                            <a href="gallery.html">Gallery</a>
+                                        </li>
+                                        
+                                        <li><a href="contact.html">Contact Us</a></li>
                         <li>
                             <!-- <a href="https://forms.gle/eNZ2vN988XX5GTFK8" target="_blank">Register for GL</a -->
                             <!-- > -->
@@ -696,7 +701,7 @@
                     <div class="copyright">
                         <a href="https://ieeenitb.com/">IEEENITB.COM</a> |
                         <a href="http://www.manit.ac.in/">MANIT</a> |
-                        <a href="https://www.ieee.org/">IEEE.ORG </a><br /> Copyright &copy; sceecs.ieeenitb.com 2023.
+                        <a href="https://www.ieee.org/">IEEE.ORG </a><br /> Copyright &copy; sceecs.ieeenitb.com 2024.
                         All rights reserved.
                     </div>
                 </div>
