--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <title>SCEECS'23 - Contact Us</title>
+    <title>SCEECS'24 - Contact Us</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
@@ -31,7 +31,7 @@
                     <div class="clearfix">
                         <div class="pull-left logo-box">
                             <div class="logo">
-                                <a href="index.html"><img src="images/logo.png" alt="" title="" id="mainlogo" /></a>
+                                <a href="index.html"><img src="images/logo.png" alt="" title="" id="mainlogo" style="width: 90px; height: 59px;" /></a>
                             </div>
 
                             <!--Mobile Navigation Toggler For Mobile-->
@@ -56,10 +56,10 @@
                                 <div class="navbar-collapse collapse scroll-nav clearfix" id="navbarSupportedContent">
                                     <ul class="navigation clearfix">
                                         <li><a href="index.html">Home</a></li>
-                                        <li><a href="about.html">About</a></li>
-                                        <li><a href="workshop.html">Workshop</a></li>
+                                        <li><a href="/about.html">About</a></li>
+                                       
                                         <li><a href="speaker.html">Guest Lecture</a></li>
-                                        <li><a href="callforpaper.html">Call For Paper</a></li>
+                                        <!-- <li><a href="callforpaper.html">Call For Paper</a></li> -->
                                         <!-- <li class="dropdown">
                                             <a href="#">Guidelines</a>
                                             <ul>
@@ -74,7 +74,7 @@
                           </li>
                         </ul>
                       </li> -->
-                                        <li><a href="gallery.html">Gallery</a></li>
+                      <li><a href="gallery.html">Gallery</a></li>
                                         <li class="current">
                                             <a href="contact.html">Contact Us</a>
                                         </li>
@@ -103,7 +103,7 @@
                     <!--Logo-->
                     <div class="logo pull-left">
                         <a href="index.html" class="img-responsive"><img src="images/small-logo.png" alt="logo"
-                                title="" /></a>
+                                title="" style="width: 80px; height: 56px;"  /></a>
                     </div>
 
                     <!--Right Col-->
@@ -131,7 +131,7 @@
                     <span class="icon flaticon-cancel"></span>
                 </div>
 
-                <nav class="menu-box">
+                <nav class="menu-box" style="background-color: rgb(4, 4, 36);">
                     <div class="nav-logo">
                         <a href="index.html"><img src="images/logo-dark.png" alt="" title="" /></a>
                     </div>
@@ -174,7 +174,7 @@
                 <!-- Sec Title -->
                 <div class="sec-title centered">
                     <div class="title">Get In Touch With Us</div>
-                    <h2>IEEE SCEECS 2023</h2>
+                    <h2>IEEE SCEECS 2024</h2>
                     <div class="separator"></div>
                 </div>
 
@@ -220,7 +220,7 @@
             <div class="auto-container">
                 <!-- Sec Title -->
                 <div class="sec-title centered">
-                    <div class="title">Welcome to SCEECS'23</div>
+                    <div class="title">Welcome to SCEECS'24</div>
                     <h2>Contact Team</h2>
                     <div class="separator"></div>
                 </div>
@@ -231,7 +231,7 @@
                             <div class="dots-one"></div>
                             <div class="dots-two"></div>
                             <div class="image">
-                                <img src="Muskan.jpeg" alt="" />
+                                <img src="Devansh.jpeg" alt="" />
                                 <ul class="social-box">
                                     <!-- <li><a href="tel:+91-8529458935"><span class="fa fa-phone"></span></a></li> -->
                                     <!-- <li>
@@ -239,13 +239,13 @@
                       ></a>
                                     </li> -->
                                     <li>
-                                        <a href="https://www.linkedin.com/in/muskan-soni-42b165199/"
+                                        <a href="https://www.linkedin.com/in/devansh-kapri/"
                                             target="_blank"><span class="fab fa-linkedin-in"></span></a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="#" target="_blank">Ms. Muskan Soni</a></h3>
+                                <h3><a href="#" target="_blank">Mr. Devansh Kapri</a></h3>
                                 <div class="designation">Organizing Co-chair</div>
                             </div>
                         </div>
@@ -257,18 +257,19 @@
                             <div class="dots-one"></div>
                             <div class="dots-two"></div>
                             <div class="image">
-                                <img src="Aditi.png" alt="" />
+                                <img src="Vidushi Sharma.jpg" alt="" />
                                 <ul class="social-box">
                                     <!-- <li><a href="tel:+91-7987307024"><span class="fa fa-phone"></span></a></li> -->
 
                                     <li>
-                                        <a href="https://www.linkedin.com/in/aditi-gupta-ba0a2b1ab/"
+                                        <a href="https://www.linkedin.com/in/vidushi-sharma-719134204/"
                                             target="_blank"><span class="fab fa-linkedin-in"></span></a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="#">Ms. Aditi Gupta</a></h3>
+                                <h3><a href="#">Ms. Vidushi Sharma
+                                </a></h3>
                                 <div class="designation">Publication Co-chair</div>
                             </div>
                         </div>
@@ -279,18 +280,18 @@
                             <div class="dots-one"></div>
                             <div class="dots-two"></div>
                             <div class="image">
-                                <img src="Vedant.png" alt="" />
+                                <img src="Arya Jain.jpg" alt="" />
                                 <ul class="social-box">
                                     <!-- <li><a href="tel:+91-7987307024"><span class="fa fa-phone"></span></a></li> -->
 
                                     <li>
-                                        <a href="https://www.linkedin.com/in/vedantkalia/" target="_blank"><span
+                                        <a href="https://www.linkedin.com/in/arya-jain-0816421b8/" target="_blank"><span
                                                 class="fab fa-linkedin-in"></span></a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="#">Mr. Vedant Kalia</a></h3>
+                                <h3><a href="#">Ms. Arya Jain</a></h3>
                                 <div class="designation">Program Co-chair</div>
                             </div>
                         </div>
@@ -302,18 +303,18 @@
                             <div class="dots-one"></div>
                             <div class="dots-two"></div>
                             <div class="image">
-                                <img src="Vansh.png" alt="" />
+                                <img src="Aditya Pagnis.jpg" alt="" />
                                 <ul class="social-box">
                                     <!-- <li><a href="tel:+91-7426913306"><span class="fa fa-phone"></span></a></li> -->
 
                                     <li>
-                                        <a href="https://www.linkedin.com/in/vanshk/" target="_blank"><span
+                                        <a href="https://www.linkedin.com/in/aditya-pagnis-0a927b218/" target="_blank"><span
                                                 class="fab fa-linkedin-in"></span></a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="#" target="_blank">Mr. Vansh Kapoor</a></h3>
+                                <h3><a href="#" target="_blank">Mr. Aditya Pagnis</a></h3>
                                 <div class="designation">Finance Co-chair</div>
                             </div>
                         </div>
@@ -343,13 +344,13 @@
 
                     <div class="title-box">
                         <div class="title">A flagship conference by IEEE-MSB</div>
-                        <h2>SCEECS 2023</h2>
+                        <h2>SCEECS 2024</h2>
                     </div>
 
                     <div class="newsletter-form">
                         <div class="form-group">
-                            <a href="docs/CallForPapers.pdf" target="_blank" class="theme-btn btn-style-one">Download
-                                Brochure</a>
+                            <!-- <a href="docs/CallForPapers.pdf" target="_blank" class="theme-btn btn-style-one">Download
+                                Brochure</a> -->
                         </div>
                     </div>
                 </div>
@@ -364,7 +365,7 @@
                     <!-- Footer Logo -->
                     <div class="logo">
                         <a href="index.html"><img src="images/ieee-logo-white.png" alt="" /></a> &nbsp;
-                        <a href="index.html"><img src="images/med-logo.png" alt="" /></a>
+                        <a href="index.html"><img src="images/med-logo.png" alt="" style="width: 80px; height: 57px;" /></a>
                     </div>
                     <div class="text">
                         IEEE is the world’s largest technical professional organization. It is dedicated to the
@@ -396,11 +397,15 @@
                 <div class="auto-container">
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="speaker.html">Guest Lecture</a></li>
-                        <li><a href="callforpaper.html">Call For Paper</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
+                                        <li><a href="about.html">About</a></li>
+                                        <!-- <li><a href="workshop.html">Workshop</a></li> -->
+                                        <li><a href="speaker.html">Guest Lecture</a></li>
+                                        <!-- <li><a href="callforpaper.html">Call For Paper</a></li> -->
+ <li>
+                                            <a href="gallery.html">Gallery</a>
+                                        </li>
+                                        
+                                        <li><a href="contact.html">Contact Us</a></li>
                         <li>
                             <!-- <a href="https://forms.gle/eNZ2vN988XX5GTFK8" target="_blank">Register for GL</a -->
                             <!-- > -->
@@ -415,7 +420,7 @@
                     <div class="copyright">
                         <a href="https://ieeenitb.com/">IEEENITB.COM</a> |
                         <a href="http://www.manit.ac.in/">MANIT</a> |
-                        <a href="https://www.ieee.org/">IEEE.ORG </a><br /> Copyright &copy; sceecs.ieeenitb.com 2023.
+                        <a href="https://www.ieee.org/">IEEE.ORG </a><br /> Copyright &copy; sceecs.ieeenitb.com 2024.
                         All rights reserved.
                     </div>
                 </div>
