changed sponsors type

--- a/about.html
+++ b/about.html
@@ -674,7 +674,7 @@
 
       <div class="sec-title centered">
         <div class="title">Welcome to SCEECS 2024</div>
-        <h2>Our Sponsors</h2>
+        <h2>Technical Sponsors</h2>
         <div class="separator"></div>
       </div>
 
