--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,7 @@
         <!-- Sec Title -->
 
         <div class="sec-title light centered">
-          <h2>Previous Sponsors</h2>
+          <h2>Technical Sponsors</h2>
           <div class="separator"></div>
         </div>
 
