--- a/workshop.html
+++ b/workshop.html
@@ -585,7 +585,7 @@
                 <!-- Sec Title -->
                 <div class="sec-title centered">
                     <div class="title">Appreciate Our Kind Partners</div>
-                    <h2>Our Sponsors</h2>
+                    <h2>Technical Sponsors</h2>
                     <div class="separator"></div>
                 </div>
 
