--- a/index.html
+++ b/index.html
@@ -63,20 +63,12 @@
                     <!-- <li><a href="workshop.html">Workshop</a></li> -->
                     <li><a href="speaker.html">Guest Lecture</a></li>
                     <!-- <li><a href="callforpaper.html">Call For Paper</a></li> -->
-                    <!-- <li class="dropdown">
-                                            <a href="#">Guidelines</a>
-                                            <ul>
-                                                <li>
-                                                    <a href="guidelines.html">Copyright Transfer and Registration</a
-                            >
-                          </li>
-                          <li>
-                            <a href="guidelines2.html"
-                              >Camera Ready Submission and PDF Express</a
-                            >
-                          </li>
-                        </ul>
-                                        </li> -->
+                    <!-- <li class="dropdown"><a href="#">Guidelines</a>
+                            <ul>
+                              <li><a href="guidelines.html">Copyright Transfer and Registration</a></li>
+                              <li><a href="guidelines2.html">Camera Ready Submission and PDF Express</a></li>
+                            </ul>
+                          </li> -->
                     <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                   </ul>
@@ -86,10 +78,10 @@
 
               <!-- Outer Box -->
               <div class="outer-box">
-                <!-- Button Box -->
-                <!-- <div class="btn-box">
-                                    <a href="https://forms.gle/eNZ2vN988XX5GTFK8" target="_blank" class="theme-btn btn-style-one">Register for GL</a>
-                  </div> -->
+                <div class="icon-box">
+                    <a href="https://sceecssc.onrender.com/" target="_blank"><img src="images/ssclogo.png"></a>
+                    <a href="https://www.manit.ac.in/" target="_blank"><img src="images/manit.png"></a>
+                </div>
               </div>
             </div>
           </div>
@@ -868,7 +860,7 @@
     </section>
     </section> -->
 
-    <section id="check" class="news-section" style="display: none;">
+    <!-- <section id="check" class="news-section">
       <div class="auto-container" style=" display: flex; justify-content: center;
       flex-direction: column;">
         <div class="sec-title centered">
@@ -997,15 +989,10 @@
             </tr>
           </tbody>
         </table>
- <!-- remove inline css from line 803 and 811 and when you remove line 932 -->
-        <div class="" style=" font-size: 100px; color: #000000ce; margin: auto;" >TBD</div>
+        <div class="" style=" font-size: 100px; color: #000000ce; margin: auto;" >TBD</div></div>
+    </section> -->
 
-        
-      </div>
-    </section>
-<!--  don't forget to remove inline css from line 871-->
-
-    <section class="sponsors-section-two" style="display: none;">
+    <section class="sponsors-section-two" >
       <!-- Side Icons -->
       <div class="auto-container">
         <!-- Sec Title -->
@@ -1016,9 +1003,13 @@
           <div class="separator"></div>
         </div>
 
-        <div class="sponsors-list" style="height: 150px; display: flex; align-items: center; justify-content: center;">
+        <div class="sponsors-list" style="display: flex; align-items: center; justify-content: center;">
           <!-- remove inline css when you remove tbd code -->
-          <div class="" style=" font-size: 100px; color: #000000ce;" >TBD</div>
+          <div class="centered m-1">
+            <a href="https://sceecssc.onrender.com/" target="_blank"><img src="images/ssclogo.png"></a>
+            <h2 class="centered mt-2" style="color: #222222; font-weight:700;">The SCEECS Student Club</h2>
+            <h4>- the official sponsor of SCEECS organized by IEEE MANIT STUDENT BRANCH</h4>
+          </div>
           <!-- <a href="https://www.geeksforgeeks.org/"><img src="images/clients/GFG logo.png" alt="" /></a>
           <a href="https://talerang.com/"><img src="images/clients/Talerang.png" alt="" /></a>
           <a href="https://www.interviewcake.com/assets"><img src="images/clients/interview_cake.png" alt=""></a> -->
@@ -1042,7 +1033,7 @@
         <!-- Sec Title -->
 
         <div class="sec-title light centered">
-          <h2>Technical Sponsors</h2>
+          <h2>Past Technical Sponsors</h2>
           <div class="separator"></div>
         </div>
 
