--- a/callforpaper.html
+++ b/callforpaper.html
@@ -652,8 +652,8 @@
 
                     <div class="newsletter-form">
                         <div class="form-group">
-                            <!-- <a href="docs/CallForPapers.pdf" target="_blank" class="theme-btn btn-style-one">Download Brochure</a>
-                        </div> -->
+                            <a href="docs/Call_for_papers_Final[11}1.pdf" target="_blank" class="theme-btn btn-style-one">Download Brochure</a>
+                        </div>
                     </div>
                 </div>
             </div>
