--- a/callforpaper.html
+++ b/callforpaper.html
@@ -457,7 +457,7 @@
                                 <div class="content-inner">
                                     <!-- Program Info -->
                                     <div class="program-info">
-                                        REGISTRATION CLOSED<span class="time">TBD</span><span class="dott"></span>
+                                        REGISTRATION STARTED<span class="time">End date:- 30 DEC 2023</span><span class="dott"></span>
                                     </div>
                                     <h3><a>Registration was on Microsoft CMT.</a></h3>
                                 </div>
@@ -474,7 +474,7 @@
                                     <div class="program-info" style="left: 538px">
                                         Paper Submission<span class="time">TBD</span><span class="dott"></span>
                                     </div>
-                                    <h3><a>Submit your paper through Microsoft CMT.</a></h3>
+                                    <h3><a>Conference will start accepting papers soon.</a></h3>
                                 </div>
                             </div>
                         </div>
