--- a/speaker.html
+++ b/speaker.html
@@ -62,7 +62,7 @@
                     <li class="current">
                       <a href="speaker.html">Guest Lecture</a>
                     </li>
-                    <!-- <li><a href="callforpaper.html">Call For Paper</a></li> -->
+                    <li><a href="callforpaper.html">Call For Paper</a></li>
                     <!-- <li class="dropdown">
                                             <a href="#">Guidelines</a>
                                             <ul>
