--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
                                         <li class="current"><a href="about.html">About</a></li>
                                         <!-- <li><a href="workshop.html">Workshop</a></li> -->
                                         <li><a href="speaker.html">Guest Lecture</a></li>
-                                        <!-- <li><a href="callforpaper.html">Call For Paper</a></li> -->
+                                        <li><a href="callforpaper.html">Call For Paper</a></li>
                                         <!-- <li class="dropdown">
                                             <a href="#">Guidelines</a>
                                             <ul>
