--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                                         <li><a href="/about.html">About</a></li>
                                        
                                         <li><a href="speaker.html">Guest Lecture</a></li>
-                                        <!-- <li><a href="callforpaper.html">Call For Paper</a></li> -->
+                                        <li><a href="callforpaper.html">Call For Paper</a></li>
                                         <!-- <li class="dropdown">
                                             <a href="#">Guidelines</a>
                                             <ul>
