--- a/callforpaper.html
+++ b/callforpaper.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>SCEECS'23-Call For Paper</title>
+    <title>SCEECS'24-Call For Paper</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet" />
 
@@ -31,7 +31,7 @@
                     <div class="clearfix">
                         <div class="pull-left logo-box">
                             <div class="logo">
-                                <a href="index.html"><img src="images/logo.png" alt="" title="" id="mainlogo" /></a>
+                                <a href="index.html"><img src="images/logo.png" alt="" title="" id="mainlogo" style="width: 90px; height: 59px;" /></a>
                             </div>
 
                             <!--Mobile Navigation Toggler For Mobile-->
@@ -56,9 +56,9 @@
                                 <div class="navbar-collapse collapse scroll-nav clearfix" id="navbarSupportedContent">
                                     <ul class="navigation clearfix">
                                         <li><a href="index.html">Home</a></li>
-                                        <li><a href="about.html">About</a></li> 
-                                        <li><a href="workshop.html">Workshop</a></li> 
-                                        <li><a href="speaker.html">Guest Lecture</a></li>
+                                        <li><a href="about.html">About</a></li>
+                    <!-- <li><a href="workshop.html">Workshop</a></li> -->
+                    <li><a href="speaker.html">Guest Lecture</a></li>
                                         <li class="current">
                                             <a href="callforpaper.html">Call For Paper</a>
                                         </li>
@@ -100,7 +100,7 @@
                     <!--Logo-->
                     <div class="logo pull-left">
                         <a href="index.html" class="img-responsive"><img src="images/small-logo.png" alt="logo"
-                                title="" /></a>
+                                title="" style="width: 80px; height: 56px;" /></a>
                     </div>
 
                     <!--Right Col-->
@@ -128,7 +128,7 @@
                     <span class="icon flaticon-cancel"></span>
                 </div>
 
-                <nav class="menu-box">
+                <nav class="menu-box" style="background-color: rgb(4, 4, 36);">
                     <div class="nav-logo">
                         <a href="index.html"><img src="images/logo-dark.png" alt="" title="" /></a>
                     </div>
@@ -163,7 +163,7 @@
                     <div class="separator"></div>
                 </div> -->
                 <div class="sec-title light centered">
-                    <div class="title">SCEECS'23</div>
+                    <div class="title">SCEECS'24</div>
                     <h2 style="color: black">Tracks and Topics</h2>
                     <div class="separator"></div>
                     <div class="title" style="margin-top: 20px; font-size: 20px; ">ORIGINAL AND UNPUBLISHED RESEARCH
@@ -445,7 +445,7 @@
             <div class="auto-container">
                 <!-- Sec Title -->
                 <div class="sec-title centered">
-                    <div class="title">SCEECS'23 Call For Paper</div>
+                    <div class="title">SCEECS'24 Call For Paper</div>
                     <h2>How it Works</h2>
                     <div class="separator"></div>
                 </div>
@@ -457,7 +457,7 @@
                                 <div class="content-inner">
                                     <!-- Program Info -->
                                     <div class="program-info">
-                                        REGISTRATION CLOSED<span class="time">Oct 2022</span><span class="dott"></span>
+                                        REGISTRATION STARTED<span class="time">26 NOV 2023</span><span class="dott"></span>
                                     </div>
                                     <h3><a>Registration was on Microsoft CMT.</a></h3>
                                 </div>
@@ -472,9 +472,9 @@
                                 <div class="content-inner">
                                     <!-- Program Info -->
                                     <div class="program-info" style="left: 538px">
-                                        Paper Submission (Deadline Over)<span class="time">15 Dec 2022</span><span class="dott"></span>
+                                        Paper Submission<span class="time">20 DEC 2023</span><span class="dott"></span>
                                     </div>
-                                    <h3><a>Submit your paper through Microsoft CMT.</a></h3>
+                                    <h3><a>Conference will start accepting papers soon.</a></h3>
                                 </div>
                             </div>
                         </div>
@@ -487,7 +487,7 @@
                                 <div class="content-inner">
                                     <!-- Program Info -->
                                     <div class="program-info" style="left: -250px">
-                                        REVIEW<span class="dott" style="right: -64px"></span>
+                                        REVIEW<span class="time">TBD</span><span class="dott" style="right: -64px"></span>
                                     </div>
                                     <h3><a>Paper is blind reviewed by experts.</a></h3>
                                 </div>
@@ -502,10 +502,10 @@
                                 <div class="content-inner">
                                     <!-- Program Info -->
                                     <div class="program-info">
-                                        PUBLISH<span class="time">will be informed.</span><span class="dott"></span>
+                                        PUBLISH<span class="time">5 JAN 2024</span><span class="dott"></span>
                                     </div>
                                     <h3>
-                                        <a>Accepted papers will be published in the SCEECS 2023
+                                        <a>Accepted papers will be published in the SCEECS 2024
                                             Conference Proceedings and submitted to IEEE Xplore.</a>
                                     </h3>
                                 </div>
@@ -519,7 +519,7 @@
                                 <div class="content-inner">
                                     <!-- Program Info -->
                                     <div class="program-info" style="left: -457px">
-                                        Camera Ready Submissions <span class="dott" style="right: -64px"></span>
+                                        Camera Ready Submissions<span class="time">20 JAN 2024</span> <span class="dott" style="right: -64px"></span>
                                     </div>
                                     <h3><a>Submissions by camera are going on.</a></h3>
                                 </div>
@@ -554,7 +554,7 @@
                             <div class="separator"></div>
 
                             <p class="price-list" id="cfpp">
-                                SCEECS 2023 invites unpublished and original research papers from <b>Undergraduate,
+                                SCEECS 2024 invites unpublished and original research papers from <b>Undergraduate,
                                     Postgraduate and Doctoral students.</b><br /> For papers in which all authors are
                                 employed by the US government, the copyright notice is:
                                 U.S. Government work not protected by U.S. copyright <br /> For papers in which all
@@ -647,12 +647,12 @@
 
                     <div class="title-box">
                         <div class="title">A flagship conference by IEEE-MSB</div>
-                        <h2>SCEECS 2023</h2>
+                        <h2>SCEECS 2024</h2>
                     </div>
 
                     <div class="newsletter-form">
                         <div class="form-group">
-                            <a href="docs/CallForPapers.pdf" target="_blank" class="theme-btn btn-style-one">Download Brochure</a>
+                            <a href="docs/Call_for_papers_Final[11}1.pdf" target="_blank" class="theme-btn btn-style-one">Download Brochure</a>
                         </div>
                     </div>
                 </div>
@@ -667,7 +667,7 @@
                     <!-- Footer Logo -->
                     <div class="logo">
                         <a href="index.html"><img src="images/ieee-logo-white.png" alt="" /></a> &nbsp;
-                        <a href="index.html"><img src="images/med-logo.png" alt="" /></a>
+                        <a href="index.html"><img src="images/med-logo.png" alt="" style="width: 80px; height: 57px;" /></a>
                     </div>
                     <div class="text">
                         IEEE is the world’s largest technical professional organization. It is dedicated to the
@@ -699,11 +699,15 @@
                 <div class="auto-container">
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="speaker.html">Guest Lecture</a></li>
-                        <li><a href="callforpaper.html">Call For Paper</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
+                                        <li><a href="about.html">About</a></li>
+                                        <!-- <li><a href="workshop.html">Workshop</a></li> -->
+                                        <li><a href="speaker.html">Guest Lecture</a></li>
+                                        <li><a href="callforpaper.html">Call For Paper</a></li>
+ <li>
+                                            <a href="gallery.html">Gallery</a>
+                                        </li>
+                                        
+                                        <li><a href="contact.html">Contact Us</a></li>
                         <li>
                             <!-- <a href="https://forms.gle/eNZ2vN988XX5GTFK8" target="_blank">Register for GL</a -->
                             <!-- > -->
@@ -718,7 +722,7 @@
                     <div class="copyright">
                         <a href="https://ieeenitb.com/">IEEENITB.COM</a> |
                         <a href="http://www.manit.ac.in/">MANIT</a> |
-                        <a href="https://www.ieee.org/">IEEE.ORG </a><br /> Copyright &copy; sceecs.ieeenitb.com 2023.
+                        <a href="https://www.ieee.org/">IEEE.ORG </a><br /> Copyright &copy; sceecs.ieeenitb.com 2024.
                         All rights reserved.
                     </div>
                 </div>
